# citbrains_control_training

./: .gitignore  LICENSE  README.md
controllers/: CMakeLists.txt  URe_controller  ure.proto  ure_controller.cpp
controllers/URe_controller/: CMakeLists.txt  URe_controller  main.cpp  sUDPSocket.hpp  ure.proto  ure_client.cpp  ure_client.hpp  ure_controller.cpp  ure_controller_constants.h  ure_controllers.hpp
src/: CMakeLists.txt  URe_sample  ure_sample.cpp
src/sample/: ure_sample.cpp
world/: .ure.wbproj  ure.wbt
